--- a/payment_service/Dockerfile.test
+++ b/payment_service/Dockerfile.test
@@ -4,7 +4,23 @@ COPY . /code
 
 WORKDIR /code
 
-RUN pip install --no-cache-dir --upgrade -r requirements-test.txt
-
-
+RUN  pip install --upgrade pip && \
+  python3 -m pip install --upgrade setuptools && \
+  apk add --no-cache \
+      python3-dev \
+      cargo \
+      openssl-dev  \
+      libc-dev \
+      gcc \
+      libressl-dev \
+      musl-dev \
+      libffi-dev && \
+    pip install --no-cache-dir --upgrade -r requirements.txt  && \
+    apk del \
+      libressl-dev \
+      musl-dev \
+      libffi-dev \
+      cargo \
+      openssl-dev \
+      python3-dev
 CMD ["pytest"]
